--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>{{ Membros do grupo }}.</h2>
+<h3>{{ Thiago | Charles | Orlando | Lucas | Carol | Georges | Rafael }}</h3>
 
 <p>Esta aplicação gerencia vestibulares.</p>
 
