Inserido os nomes dos membros da equipe

--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>{{ Membros da equipe }}.</h2>
+<h3>{{ Thiago | Charles | Orlando | Lucas | Carol | Georges | Rafael }}</h3>
 
 <address>
     Empresa Software Soluções<br />
